# tdd

./: .gitignore  functional_test.py  pyproject.toml
accounts/: authentication.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_token.py
accounts/tests/: test_authentication.py  test_models.py  test_views.py
deploy_tools/: fabfile.py  gunicorn-systemd.template.conf  nginx.template.conf  provisioning_notes.md
functional_tests/: base.py  server_tools.py  test_layout_and_stying.py  test_list_item_validation.py  test_login.py  test_my_list.py  test_simple_list_creation.py  tests.py
functional_tests/management/commands/: create_session.py
lists/: forms.py  models.py  tests.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py  0005_list_item_unique_together.py
lists/static/tests/: tests.html
lists/templates/: base.html  home.html  list.html
lists/tests/: test_forms.py  test_models.py  test_views.py
superlists/: settings.py  urls.py
